--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@trendmicro/react-sidenav": "^0.5.0",
+    "@types/react-sidebar": "^3.0.0",
     "react": "^16.13.0",
+    "react-bootstrap": "^1.0.0-beta.17",
+    "react-bootstrap-sidebar": "0.0.1",
     "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0"
+    "react-open-weather": "^0.6.2",
+    "react-scripts": "3.4.0",
+    "react-sidebar": "^3.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
