--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "@testing-library/user-event": "^7.2.1",
     "@trendmicro/react-sidenav": "^0.5.0",
     "@types/react-sidebar": "^3.0.0",
+    "bootstrap": "^4.4.1",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-bootstrap-sidebar": "0.0.1",
     "react-dom": "^16.13.0",
     "react-open-weather": "^0.6.2",
     "react-scripts": "3.4.0",
-    "react-sidebar": "^3.0.2"
+    "react-sidebar": "^3.0.2",
+    "reactstrap": "^8.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
